# qt-web-extractor

./: .gitignore  PKGBUILD  README.md  pyproject.toml  qt-web-extractor.conf.example  qt-web-extractor.service
.github/workflows/: aur-publish.yml
aur/: .gitignore  PKGBUILD
qt_web_extractor/: __init__.py  __main__.py  extractor.py  server.py  tool.py
